moved sharing widget horizontally out to avoid overlap with images

--- a/prime/static/prime/css/minishare.css
+++ b/prime/static/prime/css/minishare.css
@@ -1,7 +1,7 @@
 
 div#minishare {
   left: 50%;
-  margin-left: 270px; 
+  margin-left: 400px; 
   top: 225px;
   position: fixed;
   display: block;
